Fix direction list icon getting cut off

--- a/css/common.css
+++ b/css/common.css
@@ -49,7 +49,6 @@ a.card-list-entry{
   opacity:0.8;
   bottom:0;
   right:0;
-  height:100px;
   width:100px;
   z-index:1;
 }
